# Remote-Extractor-setup

./: Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: test-action.yml
cognite/config_upload/: __main__.py
test_root_dir/: DB10389.yaml  DB10389.yml  test-extpipe.yml
