[tool.poetry]
name = "upload-config-action"
version = "0.1.0"
description = "Github action to upload configs to Cognite Data Fusion"
authors = ["Einar Marstrander Omang <einar.omang@cognite.com>"]
license = "Apache-2.0"

packages = [
    { include="cognite", from="." },
]

[tool.poetry.scripts]
upload = "cognite.config_upload.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
cognite-sdk = "^5.4.4"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
